[package]
author = "AlexSherbinin"
name = "hyper-futures"
description = "Compatibility layer for futures to use AsyncRead and AsyncWrite traits with hyper"
repository = "https://github.com/AlexSherbinin/hyper-futures"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
hyper = "1.1.0"
pin-project = "1.1.3"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1"] }
